# web-sw-cor24-pcode

./: .gitignore  CHANGES.md  CLAUDE.md  COPYRIGHT  Cargo.toml  LICENSE  README.md  Trunk.toml  build.rs  index.html
.agentrail/: domains.toml  plan.md  saga.toml  step0-summary.md
.agentrail/sessions/: 1b551339-5be6-4a57-9957-70b513c14630.jsonl  4c302d4b-4f83-4663-9a48-9e9ebd3baef4.jsonl  56fe75b6-9bee-46b3-8671-f4c76ec11b99.jsonl  d4f73394-e30b-41c1-9795-71551ffadb1e.jsonl
.agentrail/steps/001-scaffold-yew-project/: prompt.md  step.toml  summary.md
.agentrail/steps/002-002-disassembly-panel/: prompt.md  step.toml  summary.md
.agentrail/steps/003-003-call-frame-memory/: prompt.md  step.toml  summary.md
.agentrail/steps/004-004-memory-hex-viewer/: prompt.md  step.toml  summary.md
.agentrail/steps/005-005-demo-registry/: prompt.md  step.toml
.agentrail/trajectories/rust-project-init/: run_001.json
.agentrail/trajectories/yew-component/: run_001.json  run_002.json  run_003.json
asm/: pvm.s  pvmasm.s
demos/: hello.spc  t02-arith.spc  t03-globals.spc  t04-loop.spc  t11-memcpy.spc  t14-memcmp.spc  t15-jmp_ind.spc
docs/: agent-cas-wiki.md  debugger.txt  linking-loading.md  research.txt
pages/: debugger-2e00229ee0bd7ca3.css  index.html  web-dv24r-2b822606b455aad6.js  web-dv24r-2b822606b455aad6_bg.wasm  web-sw-cor24-pcode-33a6ef5b1f73cab9.js  web-sw-cor24-pcode-33a6ef5b1f73cab9_bg.wasm  web-sw-cor24-pcode-97e1024d43fc8378_bg.wasm  web-sw-cor24-pcode-a1598ff7fe18fb80_bg.wasm
scripts/: build-pages.sh  run-pascal.sh  serve.sh
src/: config.rs  debugger.css  debugger.rs  demos.rs  lib.rs  main.rs
tests/: call_trace.rs  loader_test.rs
